--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -4,11 +4,15 @@
     android:layout_height="match_parent"
     android:orientation="horizontal">
 
-    <TextView
+    <ImageView
         android:id="@+id/moviesImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-     />
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"
+        android:src="@drawable/user_placeholder"
+
+        />
 
 
 </android.support.constraint.ConstraintLayout>
