--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
@@ -8,25 +9,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.android.popularmoviesstage1.DetailActivity">
+    tools:context="com.example.android.popularmoviesstage1.DetailActivity"
+    >
 
 
         <ImageView
             android:id="@+id/image_iv"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/layout_height"
+            android:layout_height="wrap_content"
             android:adjustViewBounds="true"
             android:contentDescription="@string/movie_picture"
-            android:scaleType="centerCrop" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/detail_title_label"
-            android:textStyle="bold"
-            android:paddingLeft="@dimen/paddingLeft"
+            android:scaleType="centerCrop"
 
             />
+
+        <TextView
+            android:id="@+id/title_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/paddingLeft"
+            android:paddingTop="@dimen/paddingTop"
+            android:text="@string/detail_title_label"
+            android:textStyle="bold"
+            app:layout_constraintTop_toBottomOf="@+id/image_iv"
+/>
 
         <TextView
             android:id="@+id/title_detail"
@@ -34,16 +40,20 @@
             android:layout_height="wrap_content"
             android:textStyle="italic"
             android:paddingTop="@dimen/paddingTop"
-
+            android:paddingLeft="@dimen/paddingLeft"
+            app:layout_constraintTop_toBottomOf="@+id/title_text"
             />
 
 
         <TextView
+            android:id="@+id/release_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/paddingLeft"
+            android:paddingTop="@dimen/paddingTop"
             android:text="@string/detail_release_date_label"
             android:textStyle="bold"
-            android:paddingLeft="@dimen/paddingLeft"
+            app:layout_constraintTop_toBottomOf="@+id/title_detail"
 
             />
 
@@ -54,16 +64,22 @@
             android:layout_height="wrap_content"
             android:textStyle="italic"
             android:paddingTop="@dimen/paddingTop"
+            android:paddingLeft="@dimen/paddingLeft"
+             app:layout_constraintTop_toBottomOf="@+id/release_text"
+
 
             />
 
 
         <TextView
+            android:id="@+id/rating_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/paddingLeft"
+            android:paddingTop="@dimen/paddingTop"
             android:text="@string/detail_vote_average_label"
             android:textStyle="bold"
-            android:paddingLeft="@dimen/paddingLeft"
+            app:layout_constraintTop_toBottomOf="@+id/release_date_detail"
 
             />
 
@@ -71,18 +87,24 @@
             android:id="@+id/rating_detail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/paddingLeft"
             android:textStyle="italic"
             android:paddingTop="@dimen/paddingTop"
+            app:layout_constraintTop_toBottomOf="@+id/rating_text"
 
             />
 
 
         <TextView
+            android:id="@+id/overview_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/paddingLeft"
+            android:paddingTop="@dimen/paddingTop"
             android:text="@string/detail_overview_label"
             android:textStyle="bold"
-            android:paddingLeft="@dimen/paddingLeft"
+            app:layout_constraintTop_toBottomOf="@+id/rating_detail"
+
             />
 
 
@@ -91,7 +113,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="italic"
-            android:paddingTop="@dimen/paddingTop"
+            android:paddingLeft="@dimen/paddingLeft"
+            app:layout_constraintTop_toBottomOf="@+id/overview_text"
+
 
             />
 
