--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -32,7 +32,7 @@
             android:text="@string/detail_title_label"
             android:textStyle="bold"
             app:layout_constraintTop_toBottomOf="@+id/image_iv"
-/>
+        />
 
         <TextView
             android:id="@+id/title_detail"
@@ -117,6 +117,18 @@
             app:layout_constraintTop_toBottomOf="@+id/overview_text"
 
 
+            />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/movieTrailersGrid"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scrollbars="vertical"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            app:layout_constraintTop_toBottomOf="@+id/overview_detail"
             />
 
 
