--- a/app/src/main/res/layout/trailer_item.xml
+++ b/app/src/main/res/layout/trailer_item.xml
@@ -1,20 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-    - This Guideline divides the screen into a left half and a right half and is used to        -
-    - anchor the views to the middle of the screen.                                             -
-    - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 
 
     <ImageView
         android:id="@+id/trailerImage"
         android:layout_width="wrap_content"
         android:layout_height="100dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
         app:layout_constraintLeft_toLeftOf="parent"
         tools:src="@drawable/user_placeholder"/>
 
@@ -22,6 +19,8 @@
         android:id="@+id/trailerName"
         android:layout_width="wrap_content"
         android:layout_height="100dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
         app:layout_constraintLeft_toRightOf="@+id/trailerImage"
         />
 
