--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -23,6 +23,14 @@
 
             />
 
+        <!-- https://stackoverflow.com/questions/8930735/how-to-set-the-favorite-star-icon-to-on-when-clicked-and-off-when-again-clicked -->
+        <CheckBox
+            android:id="@+id/favbutton"
+            style="?android:attr/starStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
+
         <TextView
             android:id="@+id/title_text"
             android:layout_width="wrap_content"
