--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -9,5 +9,9 @@
         android:title="@string/top_rated"
         android:orderInCategory="2"
         android:id="@+id/action_toprated"/>
+    <item
+        android:title="@string/favourites"
+        android:orderInCategory="3"
+        android:id="@+id/action_favourites"/>
 
 </menu>
